# polsys-rs

./: .gitignore  Cargo.toml  Makefile  README.md  README.rst  REUSE.toml  build.rs  fortitude.toml  justfile
.github/workflows/: ci.yml
LICENSES/: LicenseRef-ACM.txt
examples/: basic_example.rs  fixed_point_example.rs
polsys-plp/: lapack_plp.f  polsys_plp.f90  polsys_plp_wrapper.f90
scripts/: generate_fixed_point.py
src/: bindings.rs  lib.rs  main.rs  plp.rs
