[package]
name = "polsys"
version = "0.1.0"
edition = "2024"
license = "MIT AND LicenseRef-ACM"

[features]
system-lapack = []

[dependencies]
num = { "version" = "0.4" }
thiserror = { "version" = "2" }

[build-dependencies]
cc = { "version" = "1.2" }
pkg-config = { "version" = "0.3" }

[package.metadata.typos.files]
extend-exclude = [
    "polsys-plp/README",
    "polsys-plp/lapack_plp.f",
    "polsys-plp/polsys_plp.f90",
]
