[package]
name = "polsys"
version = "0.1.0"
authors = ["Alexandru Fikl <alexfikl@gmail.com>"]
edition = "2024"
description = "Rust bindings for the POLSYS_PLP Fortran library that solves polynomial systems"
keywords = ["polynomial", "homotopy", "fortran"]
categories = ["algorithms", "science"]
readme = "README.md"
repository = "https://github.com/alexfikl/polsys-rs"
license = "MIT AND LicenseRef-ACM"
exclude = [
    ".github/*",
    ".gitignore",
]


[features]
system-lapack = []

[dependencies]
num = { "version" = "0.4" }
thiserror = { "version" = "2" }

[build-dependencies]
cc = { "version" = "1.2" }
pkg-config = { "version" = "0.3" }

[package.metadata.typos.files]
extend-exclude = [
    "polsys-plp/README",
    "polsys-plp/lapack_plp.f",
    "polsys-plp/polsys_plp.f90",
]
